# aruba-ai-jg-workshop

./: .gitignore  ML-Recipe-1.ipynb  ML-Recipe-2.ipynb  ML-Recipe-3.ipynb  ML-Recipe-4.ipynb  ML-Recipe-5.ipynb  ML-Recipe-6.ipynb  ML-Recipe-7.ipynb  build.sh  pyproject.toml  requirements.txt
.ipynb_checkpoints/: ML-Recipe-1-checkpoint.ipynb  ML-Recipe-4-checkpoint.ipynb  requirements-checkpoint.txt
.oldgit/: COMMIT_EDITMSG  FETCH_HEAD  config  index
.oldgit/logs/: HEAD
.oldgit/logs/refs/heads/: main
.oldgit/logs/refs/remotes/origin/: main
.oldgit/refs/remotes/origin/: main
