[tool.poetry]
name = "aruba-ai-workshop"
version = "0.1.0"
description = ""
authors = ["Michael Rose Jr. <michael.rose@hpe.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.0"
scikit-learn = "^1.2.2"
pre-commit = "^3.3.2"
jupyterthemes = "^0.20.0"
pandas = "^2.0.3"
sklearn = "^0.0.post5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
